Added support for Font Awesome icons

--- a/src/pssst/index.html
+++ b/src/pssst/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="/bower/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/bower/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/pssst/css/style.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
   <footer>
     <div class="input-group">
       <span class="input-group-addon" id="user"></span>
-      <input type="text" class="form-control" placeholder="user ... &crarr;">
+      <input type="text" class="form-control" placeholder="user text &crarr;">
     </div>
   </footer>
 </body>
